[tool.poetry]
name = "repl_python3_PythonChallenge"
version = "0.1.0"
description = ""
authors = ["gcgrant <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
replit = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
